--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8",
+    "zsa": "^0.6.0",
+    "zsa-openapi": "^0.3.1",
+    "zsa-react": "^0.2.3",
+    "zsa-react-query": "^0.2.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
