--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "^8.5.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.456.0",
     "next": "^14.2.4",
@@ -41,7 +42,11 @@
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zsa": "^0.6.0",
+    "zsa-openapi": "^0.3.1",
+    "zsa-react": "^0.2.3",
+    "zsa-react-query": "^0.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
