--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.5.1",
     "geist": "^1.3.0",
@@ -38,6 +39,7 @@
     "next": "^14.2.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.4",
