--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.0",
     "@clerk/elements": "^0.19.1",
     "@clerk/nextjs": "^6.2.1",
     "@hookform/resolvers": "^3.9.1",
@@ -38,7 +39,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "csv-parse": "^5.6.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.37.0",
     "embla-carousel-react": "^8.5.1",
     "geist": "^1.3.0",
@@ -82,6 +85,7 @@
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
