--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "lint": "next lint",
     "start": "next start",
     "test": "jest",
+    "start-backend": "python -m flask run",
+    "all": "concurrently  \"npm run start-backend\" \"npm run dev\"",
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@clerk/elements": "^0.19.1",
-    "@clerk/nextjs": "^6.2.1",
+    "@clerk/nextjs": "^6.6.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -35,6 +37,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.10.0",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,6 +50,8 @@
     "next": "^14.2.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -70,6 +75,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "concurrently": "^9.1.0",
     "drizzle-kit": "^0.29.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
