--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,34 @@
-name: Run Unit Tests
+name: Run Selenium Tests
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
+  run-selenium:
     runs-on: ubuntu-latest
 
-    env:
-      POSTGRES_URL: ${{secrets.POSTGRES_URL}}
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set Up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - run: npm ci
-      - run: npm run test
+          node-version: "18"
+
+      - name: Install Dependencies
+        run: |
+          npm ci
+
+      - name: Reset database
+        run: |
+          npm run db:seed
+
+      - name: Run Selenium Tests
+        run: |
+          npm run test
