--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "next dev --turbopack",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest",
+    "test": "node ./run-tests.cjs",
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
+    "selenium-webdriver": "^4.27.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
