--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "geist": "^1.3.0",
     "jotai": "^2.8.0",
     "lucide-react": "^0.456.0",
+    "mocha": "^10.8.2",
     "next": "^14.2.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
@@ -59,6 +60,7 @@
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
+    "selenium-webdriver": "^4.27.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
@@ -68,6 +70,7 @@
     "zsa-react-query": "^0.2.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -76,6 +79,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/selenium-webdriver": "^4.1.27",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.29.0",
@@ -84,6 +88,7 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-playwright-preset": "^4.0.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
